--- a/Bataille Navale Game/CMakeLists.txt
+++ b/Bataille Navale Game/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
-project(TexteAide C)
+project(Bataille_Navale_Game C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(TexteAide main.c)
+add_executable(Bataille_Navale_Game main.c)
